# ClockInCpp

./: ALL_SHAPES_IMPLEMENTATION.md  CMakeLists.txt  COMPLETE_SHAPE_IMPLEMENTATION.md  ClockControl.cpp  ClockControl.h  ClockNetCpp.slnx  ClockNetCpp.vcxproj  ClockNetCpp.vcxproj.filters  FINAL_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  VISUAL_STUDIO_BUILD.md  build-vs.bat  build.bat  main.cpp  open-vs.bat
Shapes/: ClockDrawingContext.h  HandBase.cpp  HandBase.h  IRim.h  IShape.h  RimBase.cpp  RimBase.h  RimDrawingCoordinator.cpp  RimDrawingCoordinator.h  RimItemOrientation.h  ShapeBase.cpp  ShapeBase.h  TimeComponent.h  VectorialHandBase.cpp  VectorialHandBase.h  VectorialRimBase.cpp  VectorialRimBase.h  VectorialShapeBase.cpp  VectorialShapeBase.h
Shapes/Advanced/: CapsuleHand.cpp  CapsuleHand.h  DigitalHand.cpp  DigitalHand.h  DotHand.cpp  DotHand.h  FancyBackground.cpp  FancyBackground.h  FancySweepHand.cpp  FancySweepHand.h  NibHand.cpp  NibHand.h  SlotHand.cpp  SlotHand.h
Shapes/Basic/: ImageBackground.cpp  ImageBackground.h  ImageHand.cpp  ImageHand.h  ImageRim.cpp  ImageRim.h  LineHand.cpp  LineHand.h  PathHand.cpp  PathHand.h  StringBackground.cpp  StringBackground.h  StringRim.cpp  StringRim.h
Shapes/Default/: DiamondHand.cpp  DiamondHand.h  FlatBackground.cpp  FlatBackground.h  HourNumerals.cpp  HourNumerals.h  Pin.cpp  Pin.h  Ticks.cpp  Ticks.h
Templates/: BlackTemplate.cpp  BlackTemplate.h  FancyTemplate.cpp  FancyTemplate.h  TemplateBase.h
Utils/: ColorExtensions.h
